# task-service-fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt  taskdb.db
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_tasks.py  test_user.py
