[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventual"
version = "0.1.1"
dependencies = [
    "fastapi==0.119.1",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.44",
    "asyncpg==0.30.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.11.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]